<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>basis_robot</name>
  <version>0.0.0</version>
  <description>Basis robot package with custom action interfaces</description>

  <maintainer email="adarshb2k61@gmail.com">adarsh61</maintainer>
  <license>Apache-2.0</license>

  <!-- ========= BUILD SYSTEM ========= -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ========= ROSIDL (ACTIONS / MSG / SRV) ========= -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_export_depend>rosidl_default_generators</build_export_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rosidl_default_generators</exec_depend>

  <!-- ========= PYTHON RUNTIME ========= -->


  <!-- ========= TESTING ========= -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>rclpy</depend>
  <depend>custom_action_interfaces</depend>

  <!-- ========= EXPORTS ========= -->
  <export>
    <!-- This is a Python package -->
    <build_type>ament_python</build_type>

    <!-- REQUIRED for custom msg/srv/action in ROS 2 Humble+ -->
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
