<?xml version="1.0"?>
<package format="3">
  <name>basis_robot_infaces</name>
  <version>0.0.0</version>
  <description>Custom action interfaces for basis robot</description>

  <maintainer email="adarshb2k61@gmail.com">adarsh61</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_export_depend>rosidl_default_generators</build_export_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
