<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>custom_action_interfaces</name>
  <version>0.0.0</version>
  <description>Custom action interfaces</description>

  <maintainer email="adarshb2k61@gmail.com">adarsh61</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- REQUIRED for actions -->
  <depend>rosidl_default_generators</depend>
  <depend>action_msgs</depend>

  <!-- Runtime dependency for generated interfaces -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- REQUIRED: marks this as an interface package -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
